--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -24,7 +24,7 @@ jobs:
           run: go vet ./...
 
         - name: Build
-          run: go build -v ./...
+          run: go build -v -o http-server ./cmd/main.go
 
         - name: Test
           run: go test -v ./...
