--- a/.github/workflows/http.yml
+++ b/.github/workflows/http.yml
@@ -27,7 +27,16 @@ jobs:
           run: go build -v -o http-server ./cmd/main.go
 
         - name: Test
-          run: go test -v ./...
+          run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+
+        - name: Check coverage
+          run: |
+            coverage=$(go tool cover -func=coverage.txt | grep total | awk '{print $3}' | sed 's/%//')
+            echo "Code coverage: $coverage%"
+            if (( $(echo "$coverage < 80" | bc -l) )); then
+              echo "Coverage is less than 80%"
+              exit 1
+            fi
 
 
           
